# tool_get_famous_scenery_station_airport_and_their_scws_tokens

./: CMakeLists.txt  README.md  TTLog.h  build.sh  gen_data.sh  main.cpp
inputs/airports/: china_airports_raw.txt  extract_china_airports_raw.py  extract_taiwan_airports_raw.py  taiwan_airports_raw.txt
inputs/china/: test.txt
inputs/china/xdb/: README.txt  normalize.mapping.table.ini  rules.utf8.modified.ini  rules.utf8.modified.test.ini
inputs/scenery/: china_scenery_raw.txt  extract_taiwan_scenery_raw.py  taiwan_scenery_raw.txt
inputs/stations/: china_stations_raw.txt  extract_taiwan_station_raw.py
inputs/taiwan/: test.txt
inputs/taiwan/xdb/: README.txt  normalize.mapping.table.ini  optimized.xdb  rules.utf8.modified.ini  rules.utf8.modified.test.ini
libscws/: CMakeLists.txt
libscws/Implementation/: COPYING  charset.c  charset.h  config_win32.h  crc32.c  crc32.h  darray.c  darray.h  lock.c  lock.h  pool.c  pool.h  rule.c  rule.h  scws.c  scws.h  version.h  xdb.c  xdb.h  xdict.c  xdict.h  xtree.c  xtree.h
libscws/Interface/: Add_Public_Interfaces_Here.txt
scenery/: extract_china_scenery_raw.py  extract_taiwan_scenery_raw.py
stations/: extract_china_station_raw.py  taiwan_stations_raw.txt
